# biocypher-metta

./: .gitignore  README.md  create_knowledge_graph.py  pyproject.toml
aux_files/: abc_tissues_to_ontology_map.pkl  dbsuper_tissues_map.pkl  enhancer_atlas_tissues_to_ontology.pkl  ensembl_to_hgnc.pkl  gtex_tissue_names.pkl  gtex_tissues_to_ontology_map.pkl  hgnc_ensembl_map.pkl  hgnc_symbol_map.pkl  hgnc_to_ensembl.pkl  peregrine_tissues_to_ontology_map.pkl  roadmap_epigenomics_tissue_id_map.pkl  roadmap_tissues_to_ontology_map.pkl  string_ensembl_uniprot_map.pkl
biocypher_metta/: metta_writer.py  prolog_writer.py
biocypher_metta/adapters/: __init__.py  abc_adapter.py  biogrid_adapter.py  cadd_adapter.py  ccre_adapter.py  cell_line_ontology_adapter.py  cell_ontology_adapter.py  chromatin_state_adapter.py  coxpresdb_adapter.py  dbsnp_adapter.py  dbsuper_adapter.py  dbvar_adapter.py  dgv_variant_adapter.py  drugbank_adapter.py  encode_enhancer_gene_adapter.py  endb_adapter.py  enhancer_atlas_adapter.py  enhancer_ccre_adapter.py  epd_adapter.py  (+33 more)
config/: adapters_config.yaml  adapters_config_sample.yaml  data_source.json  data_source_config.yaml  schema_config.yaml
notebooks/: finemapping_susie.ipynb  gtex_tissue_gene_exp_corr.ipynb  llm_connect.ipynb
samples/: abc.forgedb_sample.csv  cadd.forgedb_sample.csv  cato.forgedb_sample.csv  closest_gene.forgedb_sample.csv  favor_chr16_sample.csv  string_human_ppi_v12.0.txt  tad_sample.csv  tflink_homo_sapiens_interactions.tsv  uniprot_swissprot_grch38_ucsc_sample.tsv
scripts/: download_data.py  metta_space_import.py
(+6 files in other folders)
