[tool.poetry]
name = "biocypher-metta"
version = "0.0.1"
description = "Library creating a BioCypher-driven knowledge graph for Opencog Hyperon"
authors = [
    "Abdulrahman S. Omar <xabush@singularitynet.io>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
biocypher = "^0.5.4"
numpy = "^1.23.1"
tqdm = "^4.64.0"
pandas = "^2.0.1"
pyyaml = "^6.0.1"
biopython = "^1.8.1" #Solution for psycopg2 install error -> https://stackoverflow.com/a/64604562/3380414
owlready2 = "^0.44"
obonet = "1.0.0"
hgvs = "1.5.4"
typer = "^0.9.0"
google-cloud-storage = "^2.14.0" #Needed to download GTex data from Google Cloud Storage
liftover = "^1.2.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
